# application

./: .gitignore  Dockerfile  main.py  pyproject.toml  titanic.py
.github/workflows/: test.yaml
docs/: main.py
tests/: test_check.py
