[project]
name = "titanicml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lgaliana", email = "lino.galiana@insee.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
